tests/machine/x/cpp/group_by_multi_join.error
line 40: ../../../tests/machine/x/cpp/group_by_multi_join.cpp:40:13: error: ‘ps’ was not declared in this scope
   40 |   decltype((ps.cost * ps.qty)) value;
      |             ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:40:23: error: ‘ps’ was not declared in this scope
   40 |   decltype((ps.cost * ps.qty)) value;
      |                       ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:40:13: error: ‘ps’ was not declared in this scope
   40 |   decltype((ps.cost * ps.qty)) value;
      |             ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:40:23: error: ‘ps’ was not declared in this scope
   40 |   decltype((ps.cost * ps.qty)) value;
      |                       ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join.cpp:116:11: warning: narrowing conversion of ‘<lambda closure object><lambda()>::<lambda(auto:1)>().<lambda()>::<lambda(auto:1)>(<lambda()>::<lambda()>())’ from ‘int’ to ‘bool’ [-Wnarrowing]
  114 |         g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~
  115 |           return std::accumulate(v.begin(), v.end(), 0);
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  116 |         })(([&]() {
      |         ~~^~~~~~~~~
  117 |           std::vector<decltype(std::declval<__struct4>().value)> __items;
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  118 |           for (auto r : g.items) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~
  119 |             __items.push_back(r.value);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  120 |           }
      |           ~
  121 |           return __items;
      |           ~~~~~~~~~~~~~~~
  122 |         })())});
      |         ~~~~~

 39 |   decltype(std::declval<__struct3>().part) part;
 40 |   decltype((ps.cost * ps.qty)) value;
 41 | };
